--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   "author": "Kirill Izotov <enykeev@stackstorm.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "http-browserify": "^1.7.0",
     "lodash": "^2.4.1",
-    "needle": "^0.7.10",
     "rsvp": "^3.0.14"
   },
   "devDependencies": {
+    "browserify": "^6.3.2",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
     "mocha": "^2.0.1",
