--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "browserify": "^6.3.2",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
+    "del": "^0.1.3",
+    "glob": "^4.0.6",
+    "gulp": "^3.8.10",
+    "gulp-jshint": "^1.9.0",
+    "gulp-mocha": "^1.1.1",
+    "gulp-mocha-phantomjs": "^0.5.1",
+    "gulp-plumber": "^0.6.6",
     "mocha": "^2.0.1",
-    "nock": "^0.48.2"
+    "nock": "^0.50.0",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
