--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "author": "Kirill Izotov <enykeev@stackstorm.com>",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/StackStorm/st2client.js",
+  "repository" :{
+    "type" : "git",
+    "url" : "https://github.com/StackStorm/st2client.js.git"
+  },
   "dependencies": {
     "lodash": "^2.4.1",
     "object.assign": "^1.0.1",
