--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/StackStorm/st2client.js.git"
   },
   "dependencies": {
+    "eventsource": "^0.1.4",
     "lodash": "^2.4.1",
     "object.assign": "^1.0.1",
     "rsvp": "^3.0.14"
