Fix browserify 'Cannot find module vertx'
Lock specific version of rsvp until tildeio/rsvp.js#339 gets released

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eventsource": "^0.1.4",
     "lodash": "^2.4.1",
     "object.assign": "^1.0.1",
-    "rsvp": "^3.0.14"
+    "rsvp": "3.0.14"
   },
   "devDependencies": {
     "browserify": "^6.3.2",
