--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rsvp": "3.0.14"
   },
   "devDependencies": {
+    "axios": "^0.5.4",
     "browserify": "^6.3.2",
     "chai": "^2.1.2",
     "chai-as-promised": "^4.1.1",
@@ -32,7 +33,6 @@
     "gulp-mocha-phantomjs": "^0.5.1",
     "gulp-plumber": "^0.6.6",
     "gulp-size": "^1.2.1",
-    "http-browserify": "git://github.com/enykeev/http-browserify.git#feature/additional_exports",
     "mocha": "^2.0.1",
     "nock": "^0.50.0",
     "vinyl-buffer": "^1.0.0",
