--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/StackStorm/st2client.js.git"
   },
   "dependencies": {
+    "axios": "^0.7.0",
     "eventsource": "^0.1.4",
     "lodash": "^2.4.1",
     "object.assign": "^1.0.1",
@@ -31,9 +32,11 @@
     "gulp-mocha": "^1.1.1",
     "gulp-mocha-phantomjs": "^0.8.1",
     "gulp-plumber": "^0.6.6",
-    "http-browserify": "git://github.com/enykeev/http-browserify.git#feature/additional_exports",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
     "mocha": "^2.0.1",
     "nock": "^0.50.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   }
 }
