--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "https://github.com/StackStorm/st2client.js.git"
   },
+  "engine": {
+    "node": ">=0.11.0"
+  },
   "dependencies": {
     "axios": "^0.7.0",
     "eventsource": "^0.1.4",
