--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "axios": "^0.7.0",
     "eventsource": "^0.1.4",
     "lodash": "^2.4.1",
-    "object.assign": "^1.0.1",
-    "rsvp": "3.0.14"
+    "object.assign": "^1.0.1"
   },
   "devDependencies": {
     "browserify": "^6.3.2",
@@ -39,6 +38,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "mocha": "^2.0.1",
     "nock": "^0.50.0",
+    "promise-polyfill": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   }
