Add lodash as an explicit dependency

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "axios": "^0.7.0",
     "eventsource": "^0.1.4",
+    "lodash": "^4.17.15",
     "object.assign": "^1.0.1"
   },
   "devDependencies": {
