--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nyc mocha tests/",
-    "prepublish": "node_modules/.bin/gulp"
+    "prepare": "node_modules/.bin/gulp"
   },
   "nyc": {
     "temp-directory": "./coverage/.nyc_output",
@@ -42,23 +42,24 @@
     "object.assign": "^1.0.1"
   },
   "devDependencies": {
-    "browserify": "^6.3.2",
+    "browserify": "^16.5.1",
     "chai": "^2.1.2",
     "chai-as-promised": "^4.1.1",
-    "del": "^0.1.3",
-    "glob": "^4.0.6",
-    "gulp": "^3.8.10",
-    "gulp-jshint": "^1.9.0",
-    "gulp-mocha": "^1.1.1",
-    "gulp-mocha-phantomjs": "^0.8.1",
+    "del": "^5.1.0",
+    "glob": "^7.1.6",
+    "gulp": "^4.0.2",
+    "gulp-jshint": "^2.1.0",
+    "gulp-mocha": "^7.0.2",
+    "gulp-mocha-phantomjs": "^0.12.2",
     "gulp-plumber": "^0.6.6",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
-    "mocha": "^2.0.1",
+    "jshint": "^2.11.0",
+    "mocha": "^7.1.1",
     "nock": "^10.0.6",
     "nyc": "^14.1.1",
     "promise-polyfill": "^2.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
