--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "browserify": "^16.5.1",
     "chai": "^2.1.2",
     "chai-as-promised": "^4.1.1",
+    "debug": "^4.3.1",
     "del": "^5.1.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
